# hello-rocm

./: .gitignore  Dockerfile.rocm  README.md  goal.md  pyproject.toml  requirements.txt
.claude/agents/: recorder.md
src/sitevision/: __init__.py  benchmark.py  cli.py  device.py  frames.py  pipeline.py  schema.py  vlm.py
