[project]
name = "sitevision"
version = "0.0.1"
description = "Egocentric VLM inference on AMD ROCm with a throughput + cost benchmark"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "pillow>=10.0"]

[project.optional-dependencies]
hf = ["torch>=2.3", "transformers>=4.44", "accelerate>=0.33"]
video = ["opencv-python-headless>=4.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
